package it.naar.quiz.domain.question;

public class Argomento extends AbstractArgomento {
    @Override
    public ArgomentoAta getAtaChapter() {
        return null;
    }

    @Override
    public boolean isAtaChapter() {
        return false;
    }
}
