package it.naar.quiz.domain.question;

public class QuestionGenerica extends AbstractQuestion{
}
